Projet_GL/src/test/deca/context/valid/unprovided/readInt.deca
// Description:
//    Appel d'un readInt
//
// Resultat:
//    En fonction de la valeur entrée
//
// Historique:
//    Créé le 24/01/2018

{
     int a = readInt();
}
	